# Hackathon-ElevenStrategy

./: .gitignore  LICENSE  README.md  data_exploration_henri.ipynb  data_exploration_jonathan.ipynb  data_kiran.ipynb  liste_exposants.xlsx  main.py  pyproject.toml
attendance_prediction_model/: attendance_pred.py  new_attedance_pred.py  pred_test.ipynb  pred_test_experimentation.ipynb
attendance_prediction_model/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
attendance_prediction_model/catboost_info/learn/: events.out.tfevents
attendance_prediction_model/catboost_info/test/: events.out.tfevents
endless_line/data_utils/: dashboard_utils.py  dataloader.py  weather_forecast.py
endless_line/interface/: about.py  app.py  dashboard.py  dashboard_customer.py  dashboard_operator.py  home.py  when.py
endless_line/interface/assets/: background.css  custom.js  filter.css  home.css  navbar.css  style.css
endless_line/interface/widgets/: attendance.py  customer_filter.py  filter_menu.py  filter_operator.py  kpi.py  navbar.py  predicted_attendance.py  predicted_waiting.py  weather_card.py  weather_forecast.py  when_to_go_filters.py
endless_line/models/: LSTM.ipynb  attendance_model.py  lstm.py  model_utils.py  wait_time_model.py
exploration/: Hadrien.ipynb  LSTM.ipynb  data_exploration_henri.ipynb  data_exploration_jonathan.ipynb  data_kiran.ipynb  explore.ipynb  explore_jonathan.ipynb  test.py
models/: prophet_model.pkl
